// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image can take a Thumnail child component 1`] = `
<Image
  src="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
>
  <Thumbnail
    blob={null}
    fetchImage={[Function]}
    image="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
    loading={true}
    setThumbnail={[Function]}
    src="https://res.cloudinary.com/stackpie/image/upload/c_thumb,w_30/v1513979515/-895520106_m1whb3.jpg"
  >
    <img
      className="pimg pimg_loading"
    />
  </Thumbnail>
</Image>
`;

exports[`Image can take a thumbnail prop 1`] = `
<Image
  src="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
  thumbnail="http://myThumb"
>
  <img
    className="pimg pimg__loading"
    src="http://myThumb"
  />
</Image>
`;

exports[`pimg renders correctly 1`] = `
<Image
  src="https://res.cloudinary.com/stackpie/image/upload/v1513979515/-895520106_m1whb3.jpg"
>
  <img
    className="pimg pimg__loading"
    src="https://res.cloudinary.com/stackpie/image/upload/c_thumb,w_30/v1513979515/-895520106_m1whb3.jpg"
  />
</Image>
`;
